--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,60 @@
-# Temporary files
+# ===========================
+# Dependencies
+# ===========================
+node_modules/
+.pnpm-store/
+
+# ===========================
+# Build outputs
+# ===========================
+dist/
+dist-ssr/
+*.local
+
+# ===========================
+# Test coverage
+# ===========================
+coverage/
+
+# ===========================
+# Tauri / Rust
+# ===========================
+src-tauri/target/
+
+# ===========================
+# Logs
+# ===========================
+logs/
+*.log
+npm-debug.log*
+pnpm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# ===========================
+# Editor / IDE
+# ===========================
+.idea/
+*.swp
+*.swo
+*~
 .DS_Store
 Thumbs.db
 
-# Logs
-*.log
+# ===========================
+# Environment variables
+# ===========================
+.env
+.env.local
+.env.*.local
 
+# ===========================
 # OS generated files
+# ===========================
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
 ehthumbs.db
-Desktop.ini
-
-# Node modules (if any)
-node_modules/
-
-# Keep synced folders
-!chatmodes/
-!instructions/
-!prompts/
+Thumbs.db
