--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -34,9 +34,9 @@ trash = "5"
 tempfile = "3"
 
 [lints.clippy]
-# Enable recommended lint groups
-all = "warn"
-pedantic = "warn"
+# Enable recommended lint groups (lower priority so individual lints can override)
+all = { level = "warn", priority = -1 }
+pedantic = { level = "warn", priority = -1 }
 
 # Allow specific lints that are too strict for this project
 module_name_repetitions = "allow"
